# luis_json_converter

./: .gitignore  README.md  links.md  pyproject.toml
luis_json_converter/: __main__.py  converter.py
tests/: test_converter.py
tests/test_data/: test_case_expected_output.json  test_case_input.json
